Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -810,25 +810,105 @@ John Chapel
 
 ## Ответы на упражнения для размышления
 
-1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, чтобы выиграть розыгрыш розыгрыша. Используйте команду `sed`, чтобы распечатать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вы захотите отсортировать эти имена случайным образом и распечатать только первое имя из списка. 
+**1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, чтобы выиграть розыгрыш розыгрыша. Используйте команду `sed`, чтобы распечатать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вы захотите отсортировать эти имена случайным образом и распечатать только первое имя из списка.**  
+Сначала исследуйте, как параметр `-R` управляет выводом команды сортировки. Повторите эту команду пару раз на своем компьютере (обратите внимание, что вам нужно будет заключить «Главный офис» в одинарные кавычки, поэтому `sed` будет обрабатывать его как одну строку):
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d, -f1 | sort -R
+```
+Вот решение проблемы:
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d, -f1 | sort -R | head -1
+```
 
-2. Сколько человек работает в отделах финансов, инжиниринга и продаж? (Рассмотрите возможность изучения команды `uniq`). 
+**2. Сколько человек работает в отделах финансов, инжиниринга и продаж? (Рассмотрите возможность изучения команды `uniq`).**  
+Продолжайте опираться на то, что вы узнали из предыдущих упражнений. Попробуйте следующее:
+```console
+$ sed -n /'Main Office'/p mypasswd
+$ sed -n /'Main Office'/p mypasswd | cut -d, -f2
+```
+Обратите внимание, что теперь мы не заботимся о `:` в качестве разделителя. Нам просто нужно второе поле, когда мы разделяем строки символами `,`.
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d, -f2 | uniq -c
+      4 Finance
+      1 Engineering
+      2 Sales
+```
+Команда `uniq` будет выводить только уникальные строки (не повторяющиеся строки), а параметр `-c` сообщает `uniq` о необходимости подсчета совпадений одинаковых строк. Здесь есть предостережение: `uniq` будет рассматривать только соседние строки. Если это не так, вам придется использовать команду `sort`.
 
-3. Теперь вы хотите подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:
-
+**3. Теперь вы хотите подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:**  
 ```console
 First Name,Last Name,Position
 Carol,Smith,Finance
 ...
 John,Chapel,Sales
 ```
-
 Совет: используйте команды `sed`, `cut` и `paste` для достижения желаемых результатов. Обратите внимание, что запятая (`,`) будет разделителем для этого файла.
 
-4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`? 
+Начните с команд `sed` и `cut`, основываясь на том, что мы узнали из предыдущих упражнений:
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d" " -f1 > firstname
+```
 
-5. Вы пообещали себе, что будете читать классическую книгу по 100 строк в день, и решили начать с *Mariner and Mystic* Германа Мелвилла. Придумайте команду с помощью `split`, которая разделит эту книгу на разделы по 100 строк в каждом. Чтобы получить книгу в текстовом формате, найдите ее на https://www.gutenberg.org. 
+Теперь у нас есть файл `firstname` с именами наших сотрудников.
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d" " -f2 | cut -d, -f1 > lastname
+```
 
-6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы сжать несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`. 
+Теперь у нас есть файл `lastname`, содержащий фамилии каждого сотрудника. 
 
-7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.
+Далее определяем, в каком отделе работает каждый сотрудник:
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d, -f2 > department
+```
+
+Прежде чем мы приступим к окончательному решению, попробуйте следующие команды, чтобы увидеть, какой тип вывода они генерируют:
+```console
+$ cat firstname lastname department
+$ paste firstname lastname department
+```
+
+А теперь окончательное решение:
+```console
+$ paste firstname lastname department | tr '\t' ,
+$ paste firstname lastname department | tr '\t' , > names.csv
+```
+
+Здесь мы используем команду `tr` для *перевода* `\t`, разделителя табуляция, на `,`. `tr` очень полезен, когда нам нужно поменять один символ на другой. Обязательно просмотрите справочные страницы как для `tr`, так и для `paste`. Например, мы можем использовать параметр `-d` для разделителя, чтобы сделать предыдущую команду менее сложной:
+```console
+$ paste -d, firstname lastname department
+```
+
+Мы использовали здесь команду `paste`, когда нам нужно было познакомить вас с ней. Однако мы могли бы легко выполнить все задачи в одной цепочке команд:
+```console
+$ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d, -f1,2 | tr ' ' , > names.csv
+```
+
+**4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`?**  
+Если вы посмотрите страницы руководства для `md5sum`, `sha256sum` и `sha512sum`, вы увидите, что все они начинаются со следующего текста: 
+
+«Вычислить и проверить счправочник сообщения XXX» 
+
+Где «XXX» - алгоритм, который будет использоваться для создания этого справочника сообщения. 
+
+Мы будем использовать `md5sum` в качестве примера, а позже вы можете попробовать другие команды.
+```console
+$ md5sum names.csv
+61f0251fcab61d9575b1d0cbf0195e25  names.csv
+```
+Теперь, например, вы можете сделать файл доступным через безопасную службу ftp и отправить сгенерированный *дайджест сообщения*, используя другое безопасное средство связи. Если файл был немного изменен, *дайджест сообщения* будет совершенно другим. Чтобы доказать это, отредактируйте файл `names.csv` и замените Джеймса на Джонса, как показано здесь:
+```console
+$ sed -i.backup s/James/Jones/ names.csv
+$ md5sum names.csv
+f44a0d68cb480466099021bf6d6d2e65  names.csv
+```
+Всякий раз, когда вы делаете файлы доступными для загрузки, всегда рекомендуется также распространять корреспондент *дайджеста сообщения*, чтобы люди, скачивающие ваш файл, могли создать *дайджест нового сообщения* и сравнить его с оригиналом. Если вы просмотрите https://kernel.org, вы найдете страницу https://mirrors.edge.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc, где вы можете получить sha256sum для всех файлов. доступны для скачивания.
+
+**5. Вы пообещали себе, что будете читать классическую книгу по 100 строк в день, и решили начать с *Mariner and Mystic* Германа Мелвилла. Придумайте команду с помощью `split`, которая разделит эту книгу на разделы по 100 строк в каждом. Чтобы получить книгу в текстовом формате, найдите ее на https://www.gutenberg.org.**
+
+
+
+**6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы сжать несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`.**  
+
+
+
+**7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.**  
