--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -886,29 +886,76 @@ $ sed -n /'Main Office'/p mypasswd | cut -d: -f5 | cut -d, -f1,2 | tr ' ' , > na
 **4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`?**  
 Если вы посмотрите страницы руководства для `md5sum`, `sha256sum` и `sha512sum`, вы увидите, что все они начинаются со следующего текста: 
 
-«Вычислить и проверить счправочник сообщения XXX» 
+«Вычисление и проверка хеш-суммы XXX» 
 
-Где «XXX» - алгоритм, который будет использоваться для создания этого справочника сообщения. 
+Где «XXX» - алгоритм, который будет использоваться для создания этой хеш-суммы. 
 
 Мы будем использовать `md5sum` в качестве примера, а позже вы можете попробовать другие команды.
 ```console
 $ md5sum names.csv
 61f0251fcab61d9575b1d0cbf0195e25  names.csv
 ```
-Теперь, например, вы можете сделать файл доступным через безопасную службу ftp и отправить сгенерированный *дайджест сообщения*, используя другое безопасное средство связи. Если файл был немного изменен, *дайджест сообщения* будет совершенно другим. Чтобы доказать это, отредактируйте файл `names.csv` и замените Джеймса на Джонса, как показано здесь:
+Теперь, например, вы можете сделать файл доступным через безопасную службу ftp и отправить сгенерированный *хеш-сумму*, используя другое безопасное средство связи. Если файл был немного изменен, *хеш-сумма* будет совершенно другой. Чтобы доказать это, отредактируйте файл `names.csv` и замените Джеймса на Джонса, как показано здесь:
 ```console
 $ sed -i.backup s/James/Jones/ names.csv
 $ md5sum names.csv
 f44a0d68cb480466099021bf6d6d2e65  names.csv
 ```
-Всякий раз, когда вы делаете файлы доступными для загрузки, всегда рекомендуется также распространять корреспондент *дайджеста сообщения*, чтобы люди, скачивающие ваш файл, могли создать *дайджест нового сообщения* и сравнить его с оригиналом. Если вы просмотрите https://kernel.org, вы найдете страницу https://mirrors.edge.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc, где вы можете получить sha256sum для всех файлов. доступны для скачивания.
+Всякий раз, когда вы делаете файлы доступными для загрузки, всегда рекомендуется также распространять соответствующую *хеш-сумму*, чтобы люди, скачивающие ваш файл, могли создать новую *хеш-сумму* и сравнить ее с оригиналом. Если вы просмотрите https://kernel.org, вы найдете страницу https://mirrors.edge.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc, где вы можете получить sha256sum для всех файлов доступных для скачивания.
 
 **5. Вы пообещали себе, что будете читать классическую книгу по 100 строк в день, и решили начать с *Mariner and Mystic* Германа Мелвилла. Придумайте команду с помощью `split`, которая разделит эту книгу на разделы по 100 строк в каждом. Чтобы получить книгу в текстовом формате, найдите ее на https://www.gutenberg.org.**
+Сначала мы получим всю книгу с сайта Project Gutenberg, где вы можете получить эту и другие книги, доступные в открытом доступе.
+```console
+$ wget https://www.gutenberg.org/files/50461/50461-0.txt
+```
+Вам может потребоваться установить `wget`, если он еще не установлен в вашей системе. В качестве альтернативы вы также можете использовать `curl`. Используйте `less`, чтобы проверить книгу:
+```console
+$ less 50461-0.txt
+```
+Теперь разделим книгу на куски по 100 строк в каждой:
+```console
+$ split -l 100 -d 50461-0.txt melville
+```
+`50461-0.txt` - это файл, который мы будем разделять. `melville` будет префиксом для разделенных файлов. `-l 100` указывает количество строк, а опция `-d` сообщает `split`, чтобы пронумеровать файлы (используя предоставленный суффикс). Вы можете использовать `nl` для любого из разделенных файлов (возможно, не для последнего) и подтвердить, что каждый из них содержит 100 строк.
 
 
-
-**6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы сжать несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`.**  
-
-
+**6. Какой список вы получите, используя команду `ls -l` в каталоге `/etc`? Используя команду `cut` на выходе данной команды `ls`, как бы вы отобразили только имена файлов? А как насчет имени файла и владельца файлов? Наряду с командами `ls -l` и `cut` используйте команду `tr`, чтобы *сжать* несколько экземпляров пробела в один пробел, чтобы облегчить форматирование вывода с помощью команды `cut`.**  
+Сама по себе команда `ls` выдаст вам только имена файлов. Однако мы можем подготовить вывод `ls -l` (длинный список) для извлечения более конкретной информации.
+```console
+$ ls -l /etc | tr -s ' ' ,
+drwxr-xr-x,3,root,root,4096,out,24,16:58,acpi
+-rw-r--r--,1,root,root,3028,dez,17,2018,adduser.conf
+-rw-r--r--,1,root,root,10,out,2,17:38,adjtime
+drwxr-xr-x,2,root,root,12288,out,31,09:40,alternatives
+-rw-r--r--,1,root,root,401,mai,29,2017,anacrontab
+-rw-r--r--,1,root,root,433,out,1,2017,apg.conf
+drwxr-xr-x,6,root,root,4096,dez,17,2018,apm
+drwxr-xr-x,3,root,root,4096,out,24,16:58,apparmor
+drwxr-xr-x,9,root,root,4096,nov,6,20:20,apparmor.d
+```
+Параметр `-s` указывает `tr` сжать повторяющиеся пробелы в один экземпляр пробела. Команда `tr` работает с любым типом повторяющегося символа, который вы укажете. Затем мы заменяем пробелы запятой `,`. На самом деле нам не нужно заменять пробелы в нашем примере, поэтому мы просто опустим `,`.
+```console
+$ ls -l /etc | tr -s ' '
+drwxr-xr-x 3 root root 4096 out 24 16:58 acpi
+-rw-r--r-- 1 root root 3028 dez 17 2018 adduser.conf
+-rw-r--r-- 1 root root 10 out 2 17:38 adjtime
+drwxr-xr-x 2 root root 12288 out 31 09:40 alternatives
+-rw-r--r-- 1 root root 401 mai 29 2017 anacrontab
+-rw-r--r-- 1 root root 433 out 1 2017 apg.conf
+drwxr-xr-x 6 root root 4096 dez 17 2018 apm
+drwxr-xr-x 3 root root 4096 out 24 16:58 apparmor
+```
+Если мне нужны только имена файлов, то все, что нам нужно, это девятое поле:
+```console
+$ ls -l /etc | tr -s ' ' | cut -d" " -f9
+```
+Для имени файла и владельца файла нам понадобятся девятое и третье поля:
+```console
+$ ls -l /etc | tr -s ' ' | cut -d" " -f9,3
+```
+Что, если нам просто нужны имена папок и их владелец?
+```console
+$ ls -l /etc | grep ^d | tr -s ' ' | cut -d" " -f9,3
+```
 
 **7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.**  
