--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -959,3 +959,7 @@ $ ls -l /etc | grep ^d | tr -s ' ' | cut -d" " -f9,3
 ```
 
 **7. В этом упражнении предполагается, что вы находитесь на реальной машине (а не на виртуальной). У вас также должен быть USB-накопитель. Просмотрите страницы руководства по команде `tail` и узнайте, как следить за файлом, когда к нему добавляется текст. Наблюдая за выводом команды `tail` в файле `/var/log/syslog`, вставьте USB-накопитель. Запишите полную команду, которую вы бы использовали для получения продукта, производителя и общего объема памяти вашего USB-накопителя.**  
+```console
+$ tail -f / var / log / syslog | grep -i 'продукт \: \ | блоки \ | производитель' 8 ноября 06:01:35 brod-avell ядро: [124954.369361] usb 1-4.3: Продукт: Cruzer Blade 8 ноября 06:01:35 brod-avell ядро: [124954.369364] usb 1-4.3: Производитель: SanDisk 8 ноября 06:01:37 brod-avell ядро: [124955.419267] sd 2: 0: 0: 0: [sdc] 61056064 512-байтовые логические блоки: (31,3 ГБ / 29,1 ГБ)
+```
+Конечно, это пример, и результаты могут отличаться в зависимости от производителя карты памяти USB. Обратите внимание, что теперь мы используем параметр `-i` с командой `grep`, поскольку мы не уверены, были ли строки, которые мы ищем, в верхнем или нижнем регистре. Мы также использовали `|` как логическое ИЛИ, поэтому мы ищем строки, содержащие `product` ИЛИ `blocks` ИЛИ `manufacturer`.
