Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -10,18 +10,18 @@
 
 ## Введение
 
-Работа с текстом - важная часть работы каждого системного администратора. Дуг Макилрой, член первоначальной группы разработчиков Unix, резюмировал философию Unix и сказал (среди прочего): «Пишите программы для обработки текстовых потоков, потому что это универсальный интерфейс». Linux вдохновлен операционной системой Unix и твердо придерживается ее философии, поэтому администратор должен ожидать наличия множества инструментов для обработки текста в дистрибутиве Linux.
+Работа с текстом - важная часть работы каждого системного администратора. Дуг Макилрой, член первоначальной группы разработчиков Unix, резюмировал философию Unix и сказал (среди прочего): «Пишите программы для обработки текстовых потоков, потому что это универсальный интерфейс». Linux вдохновлен операционной системой Unix и твердо придерживается ее философии, поэтому администратор должен расчитывать на наличие множества инструментов для обработки текста в дистрибутивах Linux.
 
 
 ## Краткий обзор перенаправлений и каналов
 
 Также из философии Unix: 
 * Пишите программы, которые делают одно дело и делают это хорошо. 
-* Напишите программы для совместной работы. 
+* Пишите программы для совместной работы. 
 
-Один из основных способов заставить программы работать вместе - это *конвейеры* и *перенаправления*. Практически все ваши программы обработки текста будут получать текст из стандартного ввода (*stdin*), выводить его на стандартный вывод (*stdout*) и отправлять возможные ошибки на стандартный вывод ошибок (*stderr*). Если вы не укажете иное, стандартным вводом будет то, что вы вводите на клавиатуре (программа прочитает его после того, как вы нажмете клавишу Enter). Точно так же стандартный вывод и ошибки будут отображаться на экране вашего терминала. Посмотрим, как это работает. 
+Один из основных способов заставить программы работать вместе - это *конвейеры* и *перенаправления*. Практически все ваши программы обработки текста будут получать текст из стандартного ввода (*stdin*), выводить его на стандартный вывод (*stdout*) и отправлять возможные ошибки на стандартный вывод ошибок (*stderr*). Если вы не укажете иное, стандартным вводом будет то, что вы вводите на клавиатуре (программа прочитает его после того, как вы нажмете клавишу <kbd>Enter</kbd>). Точно так же стандартный вывод и ошибки будут отображаться на экране вашего терминала. Посмотрим, как это работает. 
 
-В терминале введите `cat` и нажмите клавишу Enter. Затем введите произвольный текст.
+В терминале введите `cat` и нажмите клавишу <kbd>Enter</kbd>. Затем введите произвольный текст.
 
 ```console
 $ cat
@@ -36,7 +36,7 @@ It is repeating everything I type!
 ^C
 ```
 
-Для получения дополнительной информации о команде `cat` (термин происходит от «конкатенация») обратитесь к страницам руководства.
+Для получения дополнительной информации о команде `cat` (термин происходит от слова «конкатенация») обратитесь к страницам руководства.
 
 >Если вы работаете с действительно простой установкой сервера Linux, некоторые команды, такие как `info` и `less`, могут быть недоступны. В этом случае установите эти инструменты, используя соответствующую процедуру в вашей системе, как описано в соответствующих уроках.
 
@@ -82,7 +82,7 @@ $ diff mynewtextfile mytextfile
 < This is my new line
 ```
 
-До сих пор мы использовали перенаправления для создания файлов и управления ими. Мы также можем использовать каналы (обозначенные символом `|`) для перенаправления вывода одной программы в другую программу. Найдем строки, в которых встречается слово «это»:
+До сих пор мы использовали перенаправления для создания файлов и управления ими. Мы также можем использовать каналы (обозначенные символом `|`) для перенаправления вывода одной программы в другую программу. Найдем строки, в которых встречается слово «this»:
 
 ```console
 $ cat mytextfile | grep this
@@ -95,7 +95,7 @@ I hope cat is storing this to mytextfile as I redirected the output
 I will hit ctrl+c now and check this
 ```
 
-Теперь мы передали вывод `cat` другой команде: `grep`. Обратите внимание, когда мы игнорируем регистр (используя параметр `-i`), в результате мы получаем дополнительную строку.
+Теперь мы передали вывод `cat` другой команде: `grep`. Обратите внимание, когда мы игнорируем регистр (используя параметр `-i`), мы в результате получаем дополнительную строку.
 
 
 ## Обработка текстовых потоков
@@ -199,7 +199,7 @@ zcat
 $ sudo cat /var/log/syslog
 ```
 
-…вы увидите, как очень быстро прокручиваются сообщения в окне вашего терминала. Вы можете передавать вывод в программу меньше, чтобы результаты были разбиты на страницы. Используя `less`, вы можете использовать клавиши со стрелками для навигации по выходным данным, а также использовать `vi`-подобные команды для навигации и поиска по тексту. 
+…вы увидите, как очень быстро прокручиваются сообщения в окне вашего терминала. Вы можете передавать вывод в программу `less`, чтобы результаты были разбиты на страницы. Используя `less`, вы можете использовать клавиши со стрелками для навигации по выходным данным, а также использовать `vi` подобные команды для навигации и поиска по тексту. 
 
 Однако вместо того, чтобы передавать команду `cat` в программу разбиения на страницы, более прагматично просто использовать программу разбиения на страницы напрямую:
 
@@ -238,7 +238,7 @@ Nov 13 10:24:54 hypatia kernel: [ 8010.469222] mce: CPU4: Core temperature/speed
 Nov 13 10:25:03 hypatia systemd[2004]: tracker-extract.service: Succeeded.
 ```
 
-Чтобы проиллюстрировать количество отображаемых строк, мы можем передать вывод команды `head` по конвейеру команде `nl`, которая отобразит количество строк текста, переданных в команду:
+Чтобы пронумеровать отображаемые строки, мы можем передать вывод команды `head` по конвейеру команде `nl`, которая отобразит количество строк текста, переданных в команду:
 
 ```console
 $ sudo head /var/log/syslog | nl
@@ -254,14 +254,14 @@ $ sudo head /var/log/syslog | nl
 10	Nov 12 08:04:30 hypatia vdr: [929] epg data reader thread started (pid=882, tid=929, prio=high)
 ```
 
-И мы можем сделать то же самое, передав вывод команды `tail` в команду `wc`, которая по умолчанию будет подсчитывать количество слов в документе, и используя переключатель `-l`, чтобы распечатать количество строк текста, которое команда прочитала:
+И мы можем сделать то же самое, передав вывод команды `tail` в команду `wc`, которая по умолчанию будет подсчитывать количество слов в документе, и используя переключатель `-l`, чтобы вывести количество строк текста, которое команда прочитала:
 
 ```console
 $ sudo tail /var/log/syslog | wc -l
 10
 ```
 
-Если администратору нужно просмотреть больше (или меньше) начала или конца файла, можно использовать параметр `-n` для ограничения вывода команд:
+Если администратору нужно просмотреть больше (или меньше) информации с начала или с конца файла, можно использовать параметр `-n` для ограничения вывода команд:
 
 ```console
 $ sudo tail -n 5 /var/log/syslog
@@ -310,7 +310,7 @@ uniq
 wc
 ```
 
-Большую часть того, что мы можем сделать с помощью `grep`, мы также можем сделать с помощью `sed` - редактора потоков для фильтрации и преобразования текста (как указано на странице руководства по `sed`). Сначала мы восстановим наш файл `ftu.txt`, распаковав наш `gzip`-архив файла:
+Большую часть того, что мы можем сделать с помощью `grep`, мы также можем сделать с помощью `sed` - редактора потоков для фильтрации и преобразования текста (как указано на странице руководства по `sed`). Сначала мы восстановим наш файл `ftu.txt`, распаковав наш `gzip` архив:
 
 ```console
 $ gunzip ftu.txt.gz
@@ -318,7 +318,7 @@ $ ls ftu*
 ftu.txt
 ```
 
-Теперь мы можем использовать `sed` для вывода списка только строк, содержащих строку `cat`:
+Теперь мы можем использовать `sed` для перечисления только строк, содержащих `cat`:
 
 ```console
 $ sed -n /cat/p < ftu.txt
@@ -350,9 +350,9 @@ uniq
 wc
 ```
 
-Если мы не используем параметр `-n`, `sed` будет печатать все из файла, за исключением того, что `d` указывает `sed` удалить из своего вывода. Обычно `sed` используется для поиска и замены текста в файле. 
+Если мы не используем параметр `-n`, `sed` будет выводить все из файла, за исключением того, что `d` укажет `sed` удалить из своего вывода. Обычно `sed` используется для поиска и замены текста в файле. 
 
-Предположим, вы хотите заменить каждое вхождение кошки на собаку. Вы можете использовать `sed` для этого, указав опцию `s` для замены каждого экземпляра первого члена `cat` на второй термин `dog`:
+Предположим, вы хотите заменить каждое вхождение `cat` на `dog`. Вы можете использовать `sed` для этого, указав опцию `s` для замены каждого экземпляра первого термина `cat` на второй `dog`:
 
 ```console
 $ sed s/cat/dog/ < ftu.txt
@@ -386,7 +386,7 @@ $ ls ftu*
 ftu.txt  ftu.txt.backup
 ```
 
-Параметр `-i` выполнит операцию `sed` на месте с вашим исходным файлом. Если вы не используете `.backup` после параметра `-i`, вы просто переписали бы исходный файл. Все, что вы используете в качестве текста после параметра `-i`, будет именем, под которым будет сохранен исходный файл до изменений, которые вы просили выполнить `sed`.
+Параметр `-i` выполнит операцию `sed` на месте с вашим *исходным файлом*. Если бы вы не использовали `.backup` после параметра `-i`, вы просто переписали бы *исходный* файл. Все, что вы используете в качестве текста после параметра `-i`, будет именем, под которым будет сохранен исходный файл до изменений, которые вы просили выполнить `sed`.
 
 
 ## Обеспечение целостности данных
@@ -415,7 +415,7 @@ ftu.txt  ftu.txt.backup
 
 >Контрольная сумма - это значение, полученное в результате математического вычисления, основанного на криптографической хеш-функции, для файла. Существуют различные типы криптографических хеш-функций, которые различаются по силе. Экзамен предполагает, что вы знакомы с использованием `md5sum`, `sha256sum` и `sha512sum`.
 
-После того, как вы загрузите файл (например, образ `debian-10.1.0-amd64-netinst.iso`), вы затем сравните контрольную сумму загруженного файла с предоставленным вам значением контрольной суммы. 
+После того, как вы скачаете файл (например, образ `debian-10.1.0-amd64-netinst.iso`), сравните контрольную сумму загруженного файла с предоставленным вам значением контрольной суммы. 
 
 Вот пример, чтобы проиллюстрировать эту мысль. Мы рассчитаем значение SHA256 для файла `ftu.txt` с помощью команды `sha256sum`:
 
@@ -430,7 +430,7 @@ $ sha256sum ftu.txt
 $ sha256sum ftu.txt > sha256.txt
 ```
 
-Теперь, чтобы проверить файл `ftu.txt`, мы просто используем ту же команду и предоставим имя файла, которое содержит значение нашей контрольной суммы, вместе с переключателем `-c`:
+Теперь, чтобы проверить файл `ftu.txt`, мы просто используем ту же команду и предоставим имя файла, которое содержит значение нашей контрольной суммы, вместе с параметром `-c`:
 
 ```console
 $ sha256sum -c sha256.txt
@@ -456,7 +456,7 @@ sha256sum: WARNING: 1 computed checksum did NOT match
 
 ## Более глубокий взгляд на файлы
 
-Команда восьмеричного дампа (`od`) часто используется для отладки приложений и различных файлов. Сама по себе команда `od` просто выведет список содержимого файла в восьмеричном формате. Мы можем использовать наш файл `ftu.txt` ранее, чтобы попрактиковаться с этой командой:
+Команда восьмеричного дампа (`od`) часто используется для отладки приложений и различных файлов. Сама по себе команда `od` просто выведет список содержимого файла в восьмеричном формате. Мы можем использовать наш ранее созданный файл `ftu.txt`, чтобы попрактиковаться с этой командой:
 
 ```console
 $ od ftu.txt
@@ -470,7 +470,7 @@ $ od ftu.txt
 0000151
 ```
 
-Первый столбец вывода - это байтовое *смещение* для каждой строки вывода. Поскольку `od` по умолчанию выводит информацию в восьмеричном формате, каждая строка начинается с байтового смещения в восемь бит, за которым следуют восемь столбцов, каждый из которых содержит восьмеричное значение данных в этом столбце.
+Первый столбец вывода - это *байтовое смещение* для каждой строки вывода. Поскольку `od` по умолчанию выводит информацию в восьмеричном формате, каждая строка начинается с байтового смещения в восемь бит, за которым следуют восемь столбцов, каждый из которых содержит восьмеричное значение данных в этом столбце.
 
 >Напомним, что длина байта составляет 8 бит.
 
@@ -536,7 +536,7 @@ model		: 158
 (more lines skipped)
 ```
 
-* Использование команд `grep` и `wc` покажет, сколько у вас процессоров. 
+* Используя команды `grep` и `wc` отобразите, сколько у вас процессоров. 
 * Сделайте то же самое с `sed` вместо `grep`.
 
 2. Изучите свой локальный файл `/etc/passwd` с помощью команд `grep`, `sed`, `head` и `tail` для выполнения следующих задач: 
