Update 103.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.2 Process text streams using filters/103.2 Lesson 1.md
@@ -569,13 +569,13 @@ john:x:1006:1000:John Chapel,Sales,,,Main Office:/home/john:/bin/bash
 * Укажите только полные имена всех пользователей этой группы (используйте `sed` и `cut`).
 
 
-## Упражнения на размышления
+## Упражнения на размышление
 
-1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, чтобы выиграть розыгрыш розыгрыша. Используйте команду `sed`, чтобы распечатать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вы захотите отсортировать эти имена случайным образом и распечатать только первое имя из списка. 
+1. Еще раз используя файл `mypasswd` из предыдущих упражнений, придумайте команду Bash, которая выберет одного человека из главного офиса, победителя в розыгрыше конкурса. Используйте команду `sed`, чтобы показать только строки для главного офиса, а затем последовательность команд `cut`, чтобы получить имя каждого пользователя из этих строк. Затем вым необходимо отсортировать эти имена случайным образом и вывести только первое имя из списка. 
 
 2. Сколько человек работает в отделах финансов, инжиниринга и продаж? (Рассмотрите возможность изучения команды `uniq`). 
 
-3. Теперь вы хотите подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:
+3. Теперь вам необходимо подготовить файл CSV (значения, разделенные запятыми), чтобы можно было легко импортировать из файла `mypasswd` в предыдущем примере файл `names.csv` в LibreOffice. Содержимое файла будет иметь следующий формат:
 
 ```console
 First Name,Last Name,Position
@@ -584,7 +584,7 @@ Carol,Smith,Finance
 John,Chapel,Sales
 ```
 
-Совет: используйте команды `sed`, `cut` и `paste` для достижения желаемых результатов. Обратите внимание, что запятая (`,`) будет разделителем для этого файла.
+> Используйте команды `sed`, `cut` и `paste` для достижения желаемых результатов. Обратите внимание, что запятая (`,`) будет разделителем для этого файла.
 
 4. Предположим, что электронная таблица `names.csv`, созданная в предыдущем упражнении, является важным файлом, и мы хотим убедиться, что никто не будет вмешиваться в него с момента отправки кому-то и момента, когда получатель получит его. Как мы можем гарантировать целостность этого файла с помощью `md5sum`? 
 
@@ -597,7 +597,7 @@ John,Chapel,Sales
 
 ## Резюме
 
-Работа с текстовыми потоками имеет большое значение при администрировании любой системы Linux. Текстовые потоки можно обрабатывать с помощью сценариев для автоматизации повседневных задач или поиска соответствующей отладочной информации в файлах журналов. Вот краткое изложение команд, рассмотренных в этом уроке: 
+Работа с текстовыми потоками имеет большое значение при администрировании любой системы Linux. Текстовые потоки можно обрабатывать с помощью сценариев для автоматизации повседневных задач или поиска соответствующей отладочной информации в файлах журналов. Вот краткое описание команд, рассмотренных в этом уроке: 
 
 `cat`  
 Используется для объединения или чтения текстовых файлов. 
@@ -615,7 +615,7 @@ John,Chapel,Sales
 Эта команда разбивает содержимое файла на страницы и обеспечивает функции навигации и поиска. 
 
 `head`  
-Эта команда по умолчанию отображает первые 10 строк файла. С помощью переключателя `-n` можно отобразить меньше или больше строк. 
+Эта команда по умолчанию отображает первые 10 строк файла. С помощью параметра `-n` можно отобразить меньше или больше строк. 
 
 `tail`  
 Эта команда по умолчанию отображает последние 10 строк файла. С помощью параметра `-n` можно отобразить меньше или больше строк. Параметр `-f` используется для отслеживания вывода текстового файла, в который записываются новые данные. 
@@ -639,7 +639,7 @@ John,Chapel,Sales
 Редактор потока можно использовать для поиска совпадающих вхождений строк с помощью регулярных выражений, а также для редактирования файлов с использованием заранее определенных шаблонов. 
 
 `tr`  
-Команда преобразовать может заменять символы, а также удалять и сжимать повторяющиеся символы. 
+Эта команда может заменять, а также удалять и сжимать повторяющиеся символы. 
 
 `cut`  
 Эта команда может печатать столбцы текстовых файлов как поля на основе разделителя символов файла. 
