Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -29,3 +29,148 @@
 
 Конечно, существуют и другие типы файлов, но они выходят за рамки этого урока. Позже мы обсудим, как идентифицировать эти разные типы файлов.
 
+
+## Управление файлами
+
+### Использование `ls` для вывода списка файлов
+
+Команда `ls` - один из самых важных инструментов командной строки, который вам следует изучить для навигации по файловой системе. 
+
+В своей базовой форме `ls` перечислит *только* имена файлов и каталогов:
+
+```console
+$ ls
+Desktop Downloads   emp_salary  file1   Music   Public  Videos
+Documents   emp_name    examples.desktop    file2   Pictures    Templates
+```
+
+При использовании с `-l`, называемом форматом «длинный список», он показывает права доступа к файлу или каталогу, владельца, размер, дату изменения, время и имя:
+
+```console
+$ ls -l
+total 60
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Desktop
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Documents
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Downloads
+-rw-r--r--  1   frank   frank     21    Sep 7   12:59   emp_name
+-rw-r--r--  1   frank   frank     20    Sep 7   13:03   emp_salary
+-rw-r--r--  1   frank   frank   8980    Apr 1   2018    examples.desktop
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file1
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file2
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Music
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Pictures
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Public
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Templates
+drwxr-xr-x  2   frank   frank   4096    Apr 1   2018    Videos
+```
+
+Первый символ в выводе указывает тип файла: 
+
+`-`  
+для обычного файла.  
+
+`d`  
+для справочника. 
+
+`c`  
+для специального файла. 
+
+Чтобы показать размеры файлов в удобочитаемом формате, добавьте параметр `-h`:
+
+```console
+$ ls -lh
+total 60K
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Desktop
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Documents
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Downloads
+-rw-r--r--  1   frank   frank     21    Sep 7   12:59   emp_name
+-rw-r--r--  1   frank   frank     20    Sep 7   13:03   emp_salary
+-rw-r--r--  1   frank   frank   8.8K    Apr 1   2018    examples.desktop
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file1
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file2
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Music
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Pictures
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Public
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Templates
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Videos
+```
+
+Чтобы вывести список всех файлов, включая скрытые (начинающиеся с `.`), Используйте параметр `-a`:
+
+```console
+$ ls -a
+.               .dbus   file1   .profile
+..              Desktop file2   Public
+.bash_history   .dmrc  .gconf  .sudo_as_admin_successful
+```
+
+Файлы конфигурации, такие как `.bash_history`, которые по умолчанию скрыты, теперь видны. Как правило, синтаксис команды `ls` имеет следующий вид:
+
+```console
+ls OPTIONS FILE
+```
+
+Где `OPTIONS` - это любая из опций, показанных ранее (чтобы просмотреть все возможные опции, запустите `man ls`), а `FILE` - это имя файла или сведения о каталоге, которые вы хотите перечислить.
+
+>Если `FILE` не указан, подразумевается текущий каталог.
+
+### Создание, копирование, перемещение и удаление файлов
+
+#### Создание файлов при помощи `touch`
+
+Команда `touch` - это самый простой способ создавать новые пустые файлы. Вы также можете использовать его для изменения отметок времени (т.е. времени модификации) существующих файлов и каталогов. Синтаксис использования `touch`:
+
+```console
+touch OPTIONS FILE_NAME(S)
+```
+
+Без каких-либо параметров `touch` создаст новые файлы для любых имен файлов, которые указаны в качестве аргументов, при условии, что файлы с такими именами еще не существуют. `touch` может одновременно создавать любое количество файлов:
+
+```console
+$ touch file1 file2 file3
+```
+
+Это создаст три новых пустых файла с именами `file1`, `file2` и `file3`. 
+
+Несколько опций `touch` специально разработаны, чтобы позволить пользователю изменять временные метки для файлов. Например, опция `-a` изменяет только время доступа, а опция `-m` изменяет только время модификации. Использование обеих опций вместе изменяет время доступа, а также время модификации на текущее время:
+
+```console
+$ touch -am file3
+```
+
+
+#### Копирование файлов с помощью `cp`
+
+Как пользователь Linux вы часто будете копировать файлы из одного места в другое. Будь то перемещение музыкального файла из одного каталога в другой или системного файла, используйте `cp` для всех задач копирования:
+
+```console
+$ cp file1 dir2
+```
+
+Эту команду можно буквально интерпретировать как копирование `file1` в каталог `dir2`. Результат - наличие `file1` внутри `dir2`. Для успешного выполнения этой команды файл `file1` должен существовать в текущем каталоге пользователя. В противном случае система сообщает об ошибке с сообщением `No such file or directory`.
+
+```console
+$ cp dir1/file1 dir2
+```
+
+В этом случае обратите внимание, что путь к файлу `file1` более явный. Исходный путь может быть выражен как *относительный* или *абсолютный путь*. Относительные пути даются со ссылкой на конкретный каталог, а абсолютные пути не даются со ссылкой. Ниже мы уточним это понятие. 
+
+На данный момент просто обратите внимание, что эта команда копирует `file1` в каталог `dir2`. Путь к файлу `file1` указан более подробно, поскольку пользователь в настоящее время не находится в каталоге `dir1`.
+
+```console
+$ cp /home/frank/Documents/file2 /home/frank/Documents/Backup
+```
+
+В этом третьем случае файл `file2`, расположенный в `/home/frank/Documents`, копируется в каталог `/home/frank/Documents/Backup`. Указанный здесь исходный путь является *абсолютным*. В двух приведенных выше примерах исходные пути *относительны*. Когда путь начинается с символа `/`, это абсолютный путь, в противном случае - относительный путь. 
+
+Общий синтаксис `cp`:
+
+```console
+cp OPTIONS SOURCE DESTINATION
+```
+
+`SOURCE` - это файл, который нужно скопировать, а `DESTINATION` - каталог, в который будет скопирован файл. `SOURCE` и `DESTINATION` могут быть указаны как абсолютные или относительные пути.
+
+
+#### Перемещение файлов с помощью `mv`
+
