Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -169,8 +169,90 @@ $ cp /home/frank/Documents/file2 /home/frank/Documents/Backup
 cp OPTIONS SOURCE DESTINATION
 ```
 
-`SOURCE` - это файл, который нужно скопировать, а `DESTINATION` - каталог, в который будет скопирован файл. `SOURCE` и `DESTINATION` могут быть указаны как абсолютные или относительные пути.
+`SOURCE` - это путь к файлу, который нужно скопировать, а `DESTINATION` - это путь к каталогу, в который будет скопирован файл. `SOURCE` и `DESTINATION` могут быть указаны в абсолютном или относительном виде.
 
 
 #### Перемещение файлов с помощью `mv`
 
+Как и `cp` для копирования, Linux предоставляет команду для перемещения и переименования файлов. Она называется `mv`. 
+
+Операция перемещения аналогична операции вырезания и вставки, которую вы обычно выполняете через графический интерфейс пользователя (GUI). 
+
+Если вы хотите переместить файл в новое место, используйте `mv` следующим образом:
+
+```console
+mv FILENAME DESTINATION_DIRECTORY
+```
+
+Вот пример:
+
+```console
+$ mv myfile.txt /home/frank/Documents
+```
+
+В результате `myfile.txt` перемещается в папку назначения `/home/frank/Documents`. 
+
+Чтобы переименовать файл, `mv` используется следующим образом:
+
+```console
+$ mv old_file_name new_file_name
+```
+
+Это изменяет имя файла с `old_file_name` на `new_file_name`. 
+
+По умолчанию `mv` не будет cпрашивать ваше подтверждение, если вы хотите перезаписать (переименовать) существующий файл. Однако вы можете разрешить системе запрашивать, используя параметр `-i`:
+
+```console
+$ mv -i old_file_name new_file_name
+mv: overwrite 'new_file_name'?
+```
+
+Эта команда запрашивает разрешение пользователя перед перезаписью `old_file_name` на `new_file_name`. И наоборот, используя `-f`:
+
+```console
+$ mv -f old_file_name new_file_name
+```
+
+принудительно перезапишет файл, не спрашивая разрешения.
+
+
+#### Удаление файлов с помощью `rm`
+
+`rm` используется для удаления файлов. Думайте об этом как об сокращенной форме слова «удалить». Обратите внимание, что действие по удалению файла обычно необратимо, поэтому эту команду следует использовать с осторожностью.
+
+```console
+$ rm file1
+```
+
+Эта команда удалит `file1`.
+
+```console
+$ rm -i file1
+rm: remove regular file 'file1'?
+```
+
+Эта команда будет запрашивать у пользователя подтверждение перед удалением `file1`. Помните, мы видели опцию `-i` при использовании `mv` ранее.
+
+```console
+$ rm -f file1
+```
+
+Эта команда принудительно удаляет `file1` без вашего подтверждения. 
+
+Одновременно можно удалить несколько файлов:
+
+```console
+$ rm file1 file2 file3
+```
+
+В этом примере `file1`, `file2` и `file3` удаляются одновременно. 
+
+Синтаксис для `rm` обычно имеет следующий вид:
+
+```console
+rm OPTIONS FILE
+```
+
+## Создание и удаление каталогов
+
+### Создание каталогов с помощью `mkdir`
