Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -256,3 +256,72 @@ rm OPTIONS FILE
 ## Создание и удаление каталогов
 
 ### Создание каталогов с помощью `mkdir`
+
+Создание каталогов имеет решающее значение для организации ваших файлов и папок. Файлы можно логически сгруппировать, храня их в каталоге. Чтобы создать каталог, используйте `mkdir`:
+
+```console
+mkdir OPTIONS DIRECTORY_NAME
+```
+
+где `DIRECTORY_NAME` - имя создаваемого каталога. Одновременно можно создать любое количество каталогов:
+
+```console
+$ mkdir dir1
+```
+
+создаст каталог `dir1` в текущем каталоге пользователя.
+
+```console
+$ mkdir dir1 dir2 dir3
+```
+
+Предыдущая команда создаст три каталога `dir1`, `dir2` и `dir3` одновременно. 
+
+Чтобы создать каталог вместе с его подкаталогами, используйте параметр `-p` («родители»):
+
+```console
+$ mkdir -p parents/children
+```
+
+Эта команда создаст структуру каталогов `parents/children`, т.е. она создаст каталоги `parents` и `children`. `children` будет находиться внутри `parents`.
+
+
+### Удаление каталогов с помощью `rmdir`
+
+`rmdir` удаляет каталог, *если он пуст*. Его синтаксис определяется следующим образом:
+
+```console
+rmdir OPTIONS DIRECTORY
+```
+
+где `DIRECTORY` может быть одним аргументом или списком аргументов.
+
+```console
+$ rmdir dir1
+```
+
+Эта команда удалит `dir1`.
+
+```console
+$ rmdir dir1 dir2
+```
+
+Эта команда одновременно удалит каталоги `dir1` и `dir2`. 
+
+Вы можете удалить каталог с его подкаталогом:
+
+```console
+$ rmdir -p parents/children
+```
+
+Это удалит структуру каталогов `parents/children`. Обратите внимание, что если какой-либо из каталогов не пуст, они не будут удалены.
+
+
+### Рекурсивное управление файлами и каталогами
+
+Чтобы управлять каталогом и его содержимым, вам необходимо применить рекурсию. Рекурсия означает выполнение действия и повторение этого действия по всему дереву каталогов. В Linux параметры `-r` или `-R` или `--recursive` обычно связаны с рекурсией. 
+
+Следующий сценарий поможет вам лучше понять рекурсию: 
+
+Вы перечисляете содержимое каталога `student`, который содержит два подкаталога `level 1` и `level 2` и файл с именем `frank`. Применяя рекурсию, команда `ls` выводит список студентов, то есть `level 1`, `level 2` и `frank`, но на этом не заканчивается. Он в равной степени войдет в подкаталоги `level 1` и `level 2`, перечислит их содержимое и так далее по дереву каталогов.
+
